@@ -15,7 +15,7 @@ struct hstock;
 
 void
 delegate_stock_open(struct hstock *stock, pool_t pool,
-                    const char *helper, const char *document_root,
+                    const char *helper, const char *document_root, bool jail,
                     const char *path,
                     delegate_callback_t callback, void *ctx,
                     struct async_operation_ref *async_ref);
