@@ -66,6 +66,7 @@ delegate_get_callback(int fd, void *ctx)
 void
 delegate_stock_request(struct hstock *stock, pool_t pool,
                        const char *helper, const char *document_root,
+                       bool jail,
                        const char *path, const char *content_type,
                        const struct http_response_handler *handler, void *ctx,
                        struct async_operation_ref *async_ref)
@@ -78,7 +79,7 @@ delegate_stock_request(struct hstock *stock, pool_t pool,
     http_response_handler_set(&get->handler, handler, ctx);
 
     delegate_stock_open(stock, pool,
-                        helper, document_root, path,
+                        helper, document_root, jail, path,
                         delegate_get_callback, get,
                         async_ref);
 }
