@@ -15,6 +15,7 @@ delegate_stock_new(pool_t pool);
 void
 delegate_stock_get(struct hstock *delegate_stock, pool_t pool,
                    const char *path, const char *document_root,
+                   bool jail,
                    stock_callback_t callback, void *callback_ctx,
                    struct async_operation_ref *async_ref);
 
