@@ -85,6 +85,7 @@ resource_get(struct http_cache *cache,
             delegate_stock_request(delegate_stock, pool,
                                    address->u.local.delegate,
                                    address->u.local.document_root,
+                                   address->u.local.jail,
                                    address->u.local.path,
                                    address->u.local.content_type,
                                    handler, handler_ctx,
