@@ -5,6 +5,7 @@ cm4all-beng-proxy (0.6.23) unstable; urgency=low
   * http-server: disable keep-alive for HTTP/1.0 clients
   * http-server: don't send "Connection: Keep-Alive"
   * delegate-stock: clear the environment
+  * delegate-stock: added jail support
 
  --
 
